k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: frontend
          image: amdp-registry.skala-ai.com/skala26a-cloud/frontend:latest
          ports:
            - containerPort: 3001
